Add support for Spark 4.0 (#72)
* Add support for Spark 4.0

* Updated CI build to include spark 4.0